--- a/Admins/resources/translations/en.jsonc
+++ b/Admins/resources/translations/en.jsonc
@@ -1,8 +1,30 @@
 {
   "ban.kick_message": "You are banned from this server.\nReason: {0}\nExpires at: {1}\nBanned by: {2} ({3})",
   "never": "Never",
-  "gag.message": "You are currently gagged, you will be able to talk at [green]{0}[default].",
-  "mute.message": "You are currently muted, you will be able to talk at [green]{0}[default].",
+  "gag.message": "{0} You are currently gagged by [green]{1}[default], you will be able to talk at [green]{2}[default].\n{0} Reason: [green]{3}[default]",
+  "mute.message": "{0} You are currently muted by [green]{1}[default], you will be able to talk at [green]{2}[default].\n{0} Reason: [green]{3}[default]",
   "admins.player_chat_format": "[green](To Admins) {0}[default]: {1}",
-  "admins.admin_chat_format": "[green](Admin Chat) {0}[default]: {1}"
+  "admins.admin_chat_format": "[green](Admin Chat) {0}[default]: {1}",
+  "command.syntax": "{0} Syntax: {1}{2} {3}",
+  "command.player_only": "{0} This command can only be used by players.",
+  "command.player_not_found": "{0} No player was found with target '[green]{1}[default]'.",
+  "command.invalid_value_range": "{0} The value '[green]{1}[default]' is invalid for argument '[green]{2}[default]' ([green]{3}-{4}[default]).",
+  "command.player_not_alive": "{0} The target player '[green]{1}[default]' is not alive.",
+  "command.hp_success": "{0} [green]{1}[default] set health for player '[green]{2}[default]' to [green]{3}[default] (armour [green]{4}[default], helmet [green]{5}[default]).",
+  "command.giveitem_success": "{0} [green]{1}[default] has given [green]{2}[default] to player '[green]{3}[default]'.",
+  "command.givemoney_success": "{0} [green]{1}[default] has given [green]${2}[default] to player '[green]{3}[default]'.",
+  "command.setmoney_success": "{0} [green]{1}[default] has set [green]${2}[default] to player '[green]{3}[default]'.",
+  "command.melee_success": "{0} [green]{1}[default] has given melee weapon to player '[green]{2}[default]'.",
+  "command.disarm_success": "{0} [green]{1}[default] has disarmed player '[green]{2}[default]'.",
+  "command.restartround": "{0} Admin [green]{1}[default] has restarted the round with a delay of [green]{2} seconds[default].",
+  "command.freeze_success": "{0} [green]{1}[default] has [red]frozen[default] player '[green]{2}[default]'.",
+  "command.unfreeze_success": "{0} [green]{1}[default] has [green]unfrozen[default] player '[green]{2}[default]'.",
+  "command.noclip_disabled": "{0} Noclip mode [red]disabled[default].",
+  "command.noclip_enabled": "{0} Noclip mode [green]enabled[default].",
+  "command.setspeed_success": "{0} You've set the speed to [green]{1}[default].",
+  "command.setgravity_success": "{0} You've set the gravity to [green]{1}[default].",
+  "command.slay_success": "{0} [green]{1}[default] has slain player '[green]{2}[default]'.",
+  "command.slap_success": "{0} [green]{1}[default] has slapped player '[green]{2}[default]'.",
+  "command.rename_success": "{0} [green]{1}[default] has renamed player '[green]{2}[default]' to '[green]{3}[default]'.",
+  "command.invalid_time_format": "{0} The time format '[green]{1}[default]' is invalid. Use relative time (ex. 7d, 12h, 30m, 15s)."
 }
