--- a/Admins/resources/translations/en.jsonc
+++ b/Admins/resources/translations/en.jsonc
@@ -27,6 +27,59 @@
   "command.slap_success": "{0} [green]{1}[default] has slapped player '[green]{2}[default]'.",
   "command.rename_success": "{0} [green]{1}[default] has renamed player '[green]{2}[default]' to '[green]{3}[default]'.",
   "command.invalid_time_format": "{0} The time format '[green]{1}[default]' is invalid. Use relative time (ex. 7d, 12h, 30m, 15s).",
+  "command.invalid_steamid": "{0} Invalid SteamID64 format: [green]{1}[default]",
+  "command.ungag_success": "{0} [green]{1}[default] removed {2} gag(s) from {3} player(s).",
+  "command.unmute_success": "{0} [green]{1}[default] removed {2} mute(s) from {3} player(s).",
+  "command.gago_success": "{0} [green]{1}[default] applied {2} to SteamID64 [green]{3}[default] until [green]{4}[default]. Reason: {5}",
+  "command.muteo_success": "{0} [green]{1}[default] applied {2} to SteamID64 [green]{3}[default] until [green]{4}[default]. Reason: {5}",
+  "command.unban_success": "{0} [green]{1}[default] removed {2} ban(s) for SteamID64 [green]{3}[default].",
+  "command.unban_none": "{0} No active bans found for SteamID64 [green]{1}[default].",
+  "command.unbanip_success": "{0} [green]{1}[default] removed {2} ban(s) for IP [green]{3}[default].",
+  "command.unbanip_none": "{0} No active bans found for IP [green]{1}[default].",
+  "command.bano_success": "{0} [green]{1}[default] banned {2} until [green]{3}[default] {4}. Reason: {5}",
+  "command.banipo_success": "{0} [green]{1}[default] banned {2} until [green]{3}[default] {4}. Reason: {5}",
+  "global": "global",
+  "gag": "gag",
+  "mute": "mute",
+  "silence": "silence",
+  "global_gag": "global gag",
+  "global_mute": "global mute",
+  "global_silence": "global silence",
+  "command.unsilence_success": "{0} [green]{1}[default] removed {2} gag(s) and {3} mute(s) from {4} player(s).",
   "adminmenu.title": "Admin Menu",
-  "adminmenu.sanctions.title": "Sanctions"
+  "adminmenu.sanctions.title": "Sanctions",
+  "adminmenu.sanctions.manage_gag": "Manage Gag",
+  "adminmenu.sanctions.manage_mute": "Manage Mute",
+  "adminmenu.sanctions.manage_silence": "Manage Silence",
+  "adminmenu.sanctions.gag": "Gag",
+  "adminmenu.sanctions.ungag": "Ungag",
+  "adminmenu.sanctions.gago": "Gag Offline",
+  "adminmenu.sanctions.globalgag": "Global Gag",
+  "adminmenu.sanctions.globalgago": "Global Gag Offline",
+  "adminmenu.sanctions.mute": "Mute",
+  "adminmenu.sanctions.unmute": "Unmute",
+  "adminmenu.sanctions.muteo": "Mute Offline",
+  "adminmenu.sanctions.globalmute": "Global Mute",
+  "adminmenu.sanctions.globalmuteo": "Global Mute Offline",
+  "adminmenu.sanctions.silence": "Silence",
+  "adminmenu.sanctions.unsilence": "Unsilence",
+  "adminmenu.sanctions.silenceo": "Silence Offline",
+  "adminmenu.sanctions.globalsilence": "Global Silence",
+  "adminmenu.sanctions.globalsilenceo": "Global Silence Offline",
+  "adminmenu.no_players_available": "{0} No players available to select.",
+  "adminmenu.confirm": "Confirm",
+  "adminmenu.cancel": "Cancel",
+  "adminmenu.done": "Done",
+  "adminmenu.sanction_applied": "{0} Sanction applied to player [green]{1}[default].",
+  "adminmenu.bans.title": "Bans",
+  "adminmenu.bans.manage_ban": "Manage Ban",
+  "adminmenu.bans.manage_banip": "Manage IP Ban",
+  "adminmenu.bans.ban": "Ban",
+  "adminmenu.bans.unban": "Unban",
+  "adminmenu.bans.globalban": "Global Ban",
+  "adminmenu.bans.banip": "Ban IP",
+  "adminmenu.bans.unbanip": "Unban IP",
+  "adminmenu.bans.globalbanip": "Global IP Ban",
+  "adminmenu.ban_applied": "{0} Ban applied to player [green]{1}[default].",
+  "adminmenu.ban_removed": "{0} Ban removed from player [green]{1}[default]."
 }
