--- a/Admins.Bans/resources/translations/en.jsonc
+++ b/Admins.Bans/resources/translations/en.jsonc
@@ -7,7 +7,38 @@
     "command.unbanip_none": "{0} No active bans found for IP [green]{1}[default].",
     "command.bano_success": "{0} [green]{1}[default] banned {2} until [green]{3}[default] {4}. Reason: {5}",
     "command.banipo_success": "{0} [green]{1}[default] banned {2} until [green]{3}[default] {4}. Reason: {5}",
-
+    "menu.bans.title": "Bans Management",
+    "menu.bans.bans.give": "Give Ban",
+    "menu.bans.bans.remove": "Remove Ban",
+    "menu.bans.bans.view": "View Bans",
+    "menu.bans.bans.give.playertitle": "Select Player",
+    "menu.bans.bans.give.online": "Online Players",
+    "menu.bans.bans.give.offline": "Offline Players",
+    "menu.bans.ban.give.kind": "Ban Kind",
+    "menu.bans.ban.give.kind.ip": "By IP Address",
+    "menu.bans.ban.give.kind.steamid": "By SteamID",
+    "menu.bans.ban.give.ip_address": "IP Address",
+    "menu.bans.ban.give.steamid": "SteamID64",
+    "menu.bans.ban.give.duration": "Duration",
+    "menu.bans.ban.give.reason": "Reason",
+    "menu.bans.ban.give.custom_reason": "Custom Reason",
+    "menu.bans.ban.give.custom_duration": "Custom Duration (ex. 7d, 12h, 30m, 15s)",
+    "menu.bans.ban.give.global": "Global Ban",
+    "menu.bans.ban.give.global.yes": "Yes",
+    "menu.bans.ban.give.global.no": "No",
+    "menu.bans.ban.confirm": "Confirm Action",
+    "menu.bans.ban.summary_in_chat": "Summary in chat",
+    "menu.bans.bans.give.enter_steamid": "Enter SteamID",
+    "menu.bans.bans.give.enter_ip": "Enter IP Address",
+    "menu.bans.bans.give.no_players": "No other players online other than yourself.",
+    "menu.bans.bans.confirmation_message": "Are you sure that you want to apply the ban?",
+    "menu.bans.bans.remove_message": "Are you sure that you want to remove the ban?",
+    "menu.continue": "Continue",
+    "menu.bans.bans.give_summary_in_chat": "=========== Give Ban ===========\nKind: [green]{0}[default]\nTarget: [green]{1}[default]\nDuration: [green]{2}[default]\nReason: [green]{3}[default]\nGlobal: [green]{4}[default]\n===================================",
+    "menu.bans.bans.remove_summary_in_chat": "=========== Remove Ban ===========\nKind: [green]{0}[default]\nTarget: [green]{1}[default]\nDuration: [green]{2}[default]\nReason: [green]{3}[default]\nGlobal: [green]{4}[default]\n===================================",
+    "menu.bans.bans.removeban.success": "{0} You have successfully removed the ban [green]#{1}[default].",
+    "yes": "Yes",
+    "no": "No",
     "command.syntax": "{0} Syntax: {1}{2} {3}",
     "command.player_only": "{0} This command can only be used by players.",
     "command.player_not_found": "{0} No player was found with target '[green]{1}[default]'.",
