update(commands): Order

--- a/Admins.Core/resources/translations/en.jsonc
+++ b/Admins.Core/resources/translations/en.jsonc
@@ -10,7 +10,8 @@
     "command.admins.group_not_found": "{0} Group '[green]{1}[default]' does not exist. Use [green]!groups list[default] to see available groups.",
     "command.admins.give.success": "{0} Successfully granted admin privileges to '[green]{1}[default]' (SteamID: [green]{2}[default]).",
     "command.admins.give.updated": "{0} Successfully updated admin '[green]{1}[default]' (SteamID: [green]{2}[default]) and added this server to their access list.",
-    "command.admins.edit.success": "{0} Successfully updated admin '[green]{1}[default]' (SteamID: [green]{2}[default]).",
+    "command.admins.edit.success": "{0} Successfully updated [green]{3}[default] to '[yellow]{4}[default]' for admin '[green]{1}[default]' (SteamID: [green]{2}[default]).",
+    "command.admins.edit.invalid_field": "{0} Invalid field '[green]{1}[default]'. Valid fields: username, groups, permissions, servers, immunity",
     "command.admins.remove.success": "{0} Successfully removed this server from admin '[green]{1}[default]' (SteamID: [green]{2}[default]).",
     "command.admins.remove.deleted": "{0} Successfully removed admin '[green]{1}[default]' (SteamID: [green]{2}[default]) from the database (no servers remaining).",
     "command.admins.not_found": "{0} No admin found with SteamID64: [green]{1}[default]",
