feat(commands): Add new player commands for god mode, respawn, swap, and team management

--- a/Admins.SuperCommands/resources/translations/en.jsonc
+++ b/Admins.SuperCommands/resources/translations/en.jsonc
@@ -18,6 +18,11 @@
     "command.slay_success": "{0} [green]{1}[default] has slain player '[green]{2}[default]'.",
     "command.slap_success": "{0} [green]{1}[default] has slapped player '[green]{2}[default]'.",
     "command.rename_success": "{0} [green]{1}[default] has renamed player '[green]{2}[default]' to '[green]{3}[default]'.",
+    "command.god_success": "{0} [green]{1}[default] has toggled god mode for player '[green]{2}[default]'.",
+    "command.respawn_success": "{0} [green]{1}[default] has respawned player '[green]{2}[default]'.",
+    "command.swap_success": "{0} [green]{1}[default] has swapped player '[green]{2}[default]' to the opposite team.",
+    "command.team_success": "{0} [green]{1}[default] has moved player '[green]{2}[default]' to team '[green]{3}[default]'.",
+    "command.team_invalid": "{0} Invalid team name '[green]{1}[default]'. Use: ct, t, spec, or none.",
     "command.syntax": "{0} Syntax: {1}{2} {3}",
     "command.player_only": "{0} This command can only be used by players.",
     "command.player_not_found": "{0} No player was found with target '[green]{1}[default]'.",
