--- a/Admins.Bans/Admins.Bans.csproj
+++ b/Admins.Bans/Admins.Bans.csproj
@@ -11,6 +11,7 @@
     <OutputPath>$(MSBuildThisFileDirectory)build/</OutputPath>
     <PublishDir>$(OutputPath)publish/Admins.Bans</PublishDir>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
@@ -73,8 +74,33 @@
     <ItemGroup>
       <PublishFiles Include="$(PublishDir)**\*.*" />
     </ItemGroup>
-    
+
     <ZipDirectory SourceDirectory="$(PublishDir)../" DestinationFile="$(OutputPath)../$(AssemblyName).zip" Overwrite="true" />
+  </Target>
+
+  <Target Name="RemoveRuntimeFolders" AfterTargets="Publish">
+    <RemoveDir Directories="$(PublishDir)runtimes" />
+  </Target>
+
+  <Target Name="RemoveUnnecessaryDependencies" AfterTargets="Publish">
+    <ItemGroup>
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.Db2.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.Firebird.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.Hana.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.Oracle.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.Redshift.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.Snowflake.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Runner.SqlServer.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Extensions.SqlServer.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Extensions.Oracle.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FluentMigrator.Extensions.Snowflake.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)Azure.*.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)FirebirdSql.*.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)Microsoft.Data.SqlClient.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)Microsoft.SqlServer.*.dll" />
+      <UnnecessaryDeps Include="$(PublishDir)Microsoft.Identity*.dll" />
+    </ItemGroup>
+    <Delete Files="@(UnnecessaryDeps)" />
   </Target>
 
 </Project> 
