--- a/Admins.Menu/Admins.Menu.csproj
+++ b/Admins.Menu/Admins.Menu.csproj
@@ -48,8 +48,12 @@
     <ItemGroup>
       <PublishFiles Include="$(PublishDir)**\*.*" />
     </ItemGroup>
-    
+
     <ZipDirectory SourceDirectory="$(PublishDir)../" DestinationFile="$(OutputPath)../$(AssemblyName).zip" Overwrite="true" />
+  </Target>
+
+  <Target Name="RemoveRuntimeFolders" AfterTargets="Publish">
+    <RemoveDir Directories="$(PublishDir)runtimes" />
   </Target>
 
 </Project> 
